--- a/html/cart.html
+++ b/html/cart.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../img/icon.ico">
     <title>Sneak Empire</title>
-    <link rel="stylesheet" href="../css/slide_cart_style.css">
-    <link rel="stylesheet" href="../css/cart.css">
+    <link rel="stylesheet" href="../css/main_cart_style.css">
     <link rel="stylesheet" href="../css/header_style.css" />
     <link rel="stylesheet" href="../css/footer_style.css" />
 </head>
