--- a/html/inicio.html
+++ b/html/inicio.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="../img/icon.ico" />
     <title>Sneak Empire</title>
     <link rel="stylesheet" href="../css/slide_cart_style.css">
+    <link rel="stylesheet" href="../css/cart_style.css">
     <link rel="stylesheet" href="../css/header_style.css" />
     <link rel="stylesheet" href="../css/footer_style.css" />
     <link rel="stylesheet" href="../css/banner_style.css" />
@@ -18,14 +19,19 @@
         loadBanner();
       </script>
     </main>
+
     <script src="../js/cart.js"></script>
-      <script>
-        loadSlideCart();
-      </script>
+
+    <script src="../js/slide-cart.js"></script>
+    <script>
+      loadSlideCart();
+    </script>
+
     <script src="../js/footer.js"></script>
     <script>
       loadFooter();
     </script>
+    
     <script src="../js/header.js"></script>
   </body>
 </html>
