--- a/html/inicio.html
+++ b/html/inicio.html
@@ -9,6 +9,7 @@
     />
     <link rel="icon" href="../img/icon.ico" />
     <title>Sneak Empire</title>
+    <link rel="stylesheet" href="../css/cart_style.css">
     <link rel="stylesheet" href="../css/slide_cart_style.css" />
     <link rel="stylesheet" href="../css/header_style.css" />
     <link rel="stylesheet" href="../css/footer_style.css" />
@@ -22,9 +23,9 @@
       </script>
     </main>
 
-    <script src="../js/data.js"></script>
-
     <script src="../js/cart.js"></script>
+
+    <script src="../js/slide-cart.js"></script>
     <script>
       loadSlideCart();
     </script>
