--- a/html/product-detail.html
+++ b/html/product-detail.html
@@ -17,7 +17,7 @@
         <div class="product-detail">
             <div class="product-images">
                 <div class="main-image">
-                    <img id="mainImage" src="/placeholder.svg" alt="Product Image">
+                    <img id="mainImage" src="" alt="Product Image">
                 </div>
                 <div class="image-thumbnails" id="imageThumbnails">
                     <!-- Thumbnails se generarán dinámicamente -->
